Added Searching by Id Feature Change in the routes so to avoid runtime errors Swagger documentation for the new API
