# docs/swagger.json
@@ -7,7 +7,7 @@
         "license": {},
         "version": "v1.0"
     },
-    "basePath": "/api/movies",
+    "basePath": "/api",
     "paths": {
         "/": {
             "get": {
@@ -36,6 +36,31 @@
                         "description": "OK",
                         "schema": {
                             "$ref": "#/definitions/model.Info"
+                        }
+                    }
+                }
+            }
+        },
+        "/{id}": {
+            "get": {
+                "description": "Get Movie By Id",
+                "tags": [
+                    "movie"
+                ],
+                "parameters": [
+                    {
+                        "type": "integer",
+                        "description": "Movie ID",
+                        "name": "id",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/model.Movie"
                         }
                     }
                 }
